tweaking the gateway URLs

--- a/src/main/istio/Gateway_VS_Openshift.yml
+++ b/src/main/istio/Gateway_VS_Openshift.yml
@@ -25,7 +25,7 @@ spec:
   http:
   - match:
     - uri:
-        prefix: /
+        prefix: /bgc
     rewrite:
       uri: /
     route:
@@ -35,9 +35,9 @@ spec:
           number: 8080
   - match:
     - uri:
-        prefix: /hello
+        prefix: /api
     rewrite:
-      uri: /hello
+      uri: /api
     route:
     - destination:
         host: blue-green-canary
