--- a/src/main/tekton/task-mvn-buildah.yml
+++ b/src/main/tekton/task-mvn-buildah.yml
@@ -4,90 +4,93 @@ metadata:
    name: mvn-buildah
 spec:
   inputs:
-   resources:
-    - name: source
-      type: git
-   params:
-   - name: contextDir
-     description: the context dir within source
-     default: .
-   - name: mavenMirrorUrl
-     description: the maven mirror url
-     default: http://repo1.maven.apache.org/maven2   
-   - name: destinationImage
-     description: Parameter Description
-     default: "$(outputs.resources.builtImage.url)"
-   - name: dockerFile
-     description: Parameter Description
-     default: Dockerfile
-  outputs:
-   resources:
-    - name: builtImage
-      type: image
-  stepTemplate:
     resources:
-      limits:
-        cpu: 250m
-        memory: 2Gi
-      requests:
-        cpu: 250m
-        memory: 2Gi
-    securityContext:
-       allowPrivilegeEscalation: false
-       privileged: false
-       # the default underprivileged user to be used
-       runAsUser: 10001
+      - name: source
+        type: git
+    params:
+      - name: contextDir
+        description: the context dir within source
+        default: .
+      - name: mavenMirrorUrl
+        description: the maven mirror url
+        default: http://repo1.maven.apache.org/maven2   
+      - name: destinationImage
+        description: Parameter Description
+        default: "$(outputs.resources.builtImage.url)"
+      - name: dockerFile
+        description: Parameter Description
+        default: Dockerfile
+      - name: tlsVerify
+        description: tls verify
+        type: string
+        default: "false"     
+  outputs:
+    resources:
+      - name: builtImage
+        type: image
   steps:
-   - name: ls-build-sources
-     image: fedora
-     command: ['ls', '/workspace/source']
-   - name: echo-dockerfile
-     image: fedora
-     command: ['echo', '$(inputs.params.dockerFile)']
-   - name: cat-dockerfile
-     image: fedora
-     command: ['cat', '/workspace/source/$(inputs.params.dockerFile)']
-   - name: echo-destinationimage    
-     image: fedora
-     command : ['echo', '$(inputs.params.destinationImage)']
-   - name: build-sources
-     image: quay.io/rhdevelopers/tutorial-tools:0.0.2
-     workingDir: "/workspace/source/$(inputs.params.contextDir)"
-     args:
-      - mvn      
-      - clean 
-      - package
-      - -DskipTests
-     env:
-     - name: MAVEN_MIRROR_URL
-       value: "$(inputs.params.mavenMirrorUrl)"
-   - name: ls-build-target
-     image: fedora
-     command: ['ls', '/workspace/source/target']
-   - name: build-image
-     image: quay.io/buildah/stable
-     workingDir: "/workspace/source/$(inputs.params.contextDir)"
-     command: ['buildah', 'bud', '--tls-verify=false', '--layers','-f', '$(inputs.params.dockerFile)', '-t', '$(inputs.params.destinationImage)', '.']
-     volumeMounts:
-     - name: varlibc
-       mountPath: /var/lib/containers
-     # override security context as container image build need to run as root
-     securityContext:
-       allowPrivilegeEscalation: true
-       runAsUser: 0
-       privileged: true
-   - name: build-push
-     image: quay.io/buildah/stable
-     workingDir: "/workspace/source/$(inputs.params.contextDir)"
-     command: ["buildah","push", "--tls-verify=false","$(inputs.params.destinationImage)","docker://$(inputs.params.destinationImage)"]
-     volumeMounts:
-     - name: varlibc
-       mountPath: /var/lib/containers
-     # override security context as container image build need to run as root
-     securityContext:
-       allowPrivilegeEscalation: true
-       runAsUser: 0
-       privileged: true
+    - name: ls-build-sources
+      image: fedora
+      command: ['ls', '/workspace/source']
+    - name: echo-dockerfile
+      image: fedora
+      command: ['echo', '$(inputs.params.dockerFile)']
+    - name: cat-dockerfile
+      image: fedora
+      command: ['cat', '/workspace/source/$(inputs.params.dockerFile)']
+    - name: echo-destinationimage    
+      image: fedora
+      command : ['echo', '$(inputs.params.destinationImage)']
+    - name: build-sources
+      image: docker.io/maven:3.6.3-jdk-8-slim
+      workingDir: "/workspace/source/$(inputs.params.contextDir)"
+      command:
+        - mvn
+      args:     
+       - clean 
+       - package
+       - -DskipTests
+      env:
+      - name: MAVEN_MIRROR_URL
+        value: "$(inputs.params.mavenMirrorUrl)"
+    - name: ls-build-target
+      image: fedora
+      command: ['ls', '/workspace/source/target']
+    - name: build-image
+      image: quay.io/buildah/stable
+      workingDir: "/workspace/source/$(inputs.params.contextDir)"
+      command:
+        - "buildah"
+      args:
+        - "bud"
+        - "--layers"
+        - "-f"
+        - "$(inputs.params.dockerFile)"
+        - "-t"
+        - "$(inputs.params.destinationImage)"
+        - "."
+      securityContext:
+        privileged: true
+        runAsUser: 0       
+      volumeMounts:
+      - name: varlibc
+        mountPath: /var/lib/containers
+    - name: push-image
+      image: quay.io/buildah/stable
+      workingDir: "/workspace/source/$(inputs.params.contextDir)"
+      command:
+        - "buildah"
+      args:
+        - "push"
+        - "--tls-verify=$(inputs.params.tlsVerify)"
+        - $(inputs.params.destinationImage)
+        - "docker://$(inputs.params.destinationImage)"
+      securityContext:
+        runAsUser: 0
+        privileged: true
+      volumeMounts:
+      - name: varlibc
+        mountPath: /var/lib/containers
   volumes:
-  - name: varlibc
-    emptyDir: {}
+    - name: varlibc
+      emptyDir: {}
