--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -1,22 +1,40 @@
-####
-# This Dockerfile is used in order to build a container that runs the Quarkus application in native (no JVM) mode
-#
-# Before building the docker image run:
-#
-# mvn package -Pnative -Dnative-image.docker-build=true
-#
-# Then, build the image with:
-#
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/websocket-reconnect .
-#
-# Then run the container using:
-#
-# docker run -i --rm -p 8080:8080 quarkus/websocket-reconnect
-#
-###
+# Using multi stage docker build
+# Stage - 1  Prepare the native image 
+
+FROM quay.io/quarkus/centos-quarkus-maven:19.3.1-java11 as build
+
+# If you want to use nexus or any other maven repository manager then
+# uncomment this to point to the repo manager
+# ENV MAVEN_MIRROR_URL http://192.168.64.1:8081/nexus/content/groups/public/
+
+USER root
+
+RUN mkdir -p /usr/src/app && \
+    chown -R quarkus /usr/src/app
+
+USER quarkus
+
+# Set the maven mirrors in the maven settings if available
+
+RUN /usr/local/bin/entrypoint-run.sh
+
+COPY src /usr/src/app/src
+COPY pom.xml /usr/src/app
+
+WORKDIR /usr/src/app
+
+RUN mvn clean package -Pnative
+
+# Stage - 2 Prepare the final container image
+
 FROM registry.access.redhat.com/ubi8/ubi-minimal
+
 WORKDIR /work/
-COPY target/*-runner /work/application
+
+COPY --from=build /usr/src/app/target/*-runner /work/application
+
 RUN chmod 775 /work
+
 EXPOSE 8080
+
 CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
