--- a/src/main/kubernetes/Deployment.yml
+++ b/src/main/kubernetes/Deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: blue-green-canary
-  name: blue
+  name: green
 spec:
   replicas: 2
   selector:
@@ -14,27 +14,23 @@ spec:
       labels:
         app: blue-green-canary
         group: bgc
-        version: blue
+        version: green
       annotations:
         sidecar.istio.io/inject: "true"
     spec:
       containers:
-        - name: blue
-          image: quay.io/rhdevelopers/blue-green-canary
-          # color blue
-          env:
-            - name: BLUE_GREEN_CANARY_COLOR
-              value: "#6bbded"
+        - name: green
+          image: burr3
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
           resources:
             requests:
-              memory: "150Mi"
-              cpu: "100m"
+              memory: 50Mi
+              cpu: 100m
             limits:
-              memory: "200Mi"
-              cpu: "250m"
+              memory: 120Mi
+              cpu: 250m
           livenessProbe:
             httpGet:
               port: 8080
