--- a/src/main/tekton/pipeline-resources-openshift.yml
+++ b/src/main/tekton/pipeline-resources-openshift.yml
@@ -4,44 +4,20 @@ metadata:
   name: bgc-git-source
 spec:
   type: git
-  params: 
-  - name: url
-    value: https://github.com/redhat-developer-demos/blue-green-canary
-  - name: revision
-    value: master
+  params:
+    - name: url
+      value: https://github.com/redhat-developer-demos/blue-green-canary
+    - name: revision
+      value: master
 ---
 apiVersion: tekton.dev/v1alpha1
 kind: PipelineResource
 metadata:
-  name: bgc-image-blue
+  name: bgc-image
 spec:
   type: image
-  params: 
-  - name: url
-    #value: "dev.local/rhdevelopers/stream-greeter"
-    # if you are on OpenShift uncomment the line below
-    value: "image-registry.openshift-image-registry.svc:5000/one/blue-green-canary:blue"
----
-apiVersion: tekton.dev/v1alpha1
-kind: PipelineResource
-metadata:
-  name: bgc-image-green
-spec:
-  type: image
-  params: 
-  - name: url
-    #value: "dev.local/rhdevelopers/stream-greeter"
-    # if you are on OpenShift uncomment the line below
-    value: "image-registry.openshift-image-registry.svc:5000/one/blue-green-canary:green"
----
-apiVersion: tekton.dev/v1alpha1
-kind: PipelineResource
-metadata:
-  name: bgc-image-canary
-spec:
-  type: image
-  params: 
-  - name: url
-    #value: "dev.local/rhdevelopers/stream-greeter"
-    # if you are on OpenShift uncomment the line below
-    value: "image-registry.openshift-image-registry.svc:5000/one/blue-green-canary:canary"
+  params:
+    - name: url
+      #value: "dev.local/rhdevelopers/stream-greeter"
+      # if you are on OpenShift uncomment the line below
+      value: "image-registry.openshift-image-registry.svc:5000/one/blue-green-canary"
