--- a/src/main/istio/Virtual_service_canary_firefox.yml
+++ b/src/main/istio/Virtual_service_canary_firefox.yml
@@ -4,19 +4,43 @@ metadata:
   name: blue-green-canary
 spec:
   hosts:
-  - "*"
+    - "*"
   gateways:
-  - bgc-gateway
+    - bgc-gateway
   http:
-  - match:
-    - headers:
-        user-agent:
-          regex: .*Firefox.*
-    route:
-    - destination:
-        host: blue-green-canary
-        subset: version-canary
-  - route:
-    - destination:
-        host: blue-green-canary
-        subset: version-green
+    - match:
+        - uri:
+            prefix: /bgc
+      rewrite:
+        uri: /
+      route:
+        - destination:
+            host: blue-green-canary
+            port:
+              number: 8080
+            subset: version-blue
+          weight: 100
+    - match:
+        - headers:
+            user-agent:
+              regex: .*Firefox.*
+      route:
+        - destination:
+            host: blue-green-canary
+            subset: version-canary
+    - match:
+        - uri:
+            prefix: /api
+      rewrite:
+        uri: /api
+      route:
+        - destination:
+            host: blue-green-canary
+            port:
+              number: 8080
+            subset: version-blue
+          weight: 100
+    - route:
+        - destination:
+            host: blue-green-canary
+            subset: version-green
