--- a/src/main/kubernetes/Deployment_blue.yml
+++ b/src/main/kubernetes/Deployment_blue.yml
@@ -25,6 +25,8 @@ spec:
           env:
             - name: BLUE_GREEN_CANARY_COLOR
               value: "#6bbded"
+            - name: BLUE_GREEN_CANARY_MESSAGE
+              value: "Hello"
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
