--- a/src/main/istio/Virtual_service_canary_mobile.yml
+++ b/src/main/istio/Virtual_service_canary_mobile.yml
@@ -12,11 +12,51 @@ spec:
         - headers:
             user-agent:
               regex: .*Mobile.*
+          uri:
+            prefix: /bgc
+      rewrite:
+        uri: /
       route:
         - destination:
             host: blue-green-canary
+            port:
+              number: 8080
             subset: version-blue
-    - route:
+          weight: 100
+    - match:
+        - headers:
+            user-agent:
+              regex: .*Mobile.*
+          uri:
+            prefix: /api
+      rewrite:
+        uri: /api
+      route:
         - destination:
             host: blue-green-canary
+            port:
+              number: 8080
+            subset: version-blue
+          weight: 100
+    - match:
+        - uri:
+            prefix: /bgc
+      rewrite:
+        uri: /
+      route:
+        - destination:
+            host: blue-green-canary
+            port:
+              number: 8080
+            subset: version-green
+    - match:
+        - uri:
+            prefix: /api
+      rewrite:
+        uri: /api
+      route:
+        - destination:
+            host: blue-green-canary
+            port:
+              number: 8080
             subset: version-green
