--- a/src/main/tekton/pipeline-resources-openshift.yml
+++ b/src/main/tekton/pipeline-resources-openshift.yml
@@ -18,6 +18,4 @@ spec:
   type: image
   params:
     - name: url
-      #value: "dev.local/rhdevelopers/stream-greeter"
-      # if you are on OpenShift uncomment the line below
-      value: "image-registry.openshift-image-registry.svc:5000/one/blue-green-canary"
+      value: quay.io/rhdevelopers/blue-green-canary
