--- a/src/main/tekton/pipeline-sa-role.yml
+++ b/src/main/tekton/pipeline-sa-role.yml
@@ -1,66 +1,66 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: pipeline
-  namespace: demo
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#   name: pipeline
+#   namespace: demo
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: pipeline-role
-  namespace: demo
+  name: pipeline-extra-role
+  namespace: tutorial
 rules:
-- apiGroups: ["serving.knative.dev"]
-  resources: ["*"]
-  verbs: ["*"]
-- apiGroups: ["eventing.knative.dev"]
-  resources: ["*"]
-  verbs: ["*"]
-- apiGroups: ["sources.eventing.knative.dev"]
-  resources: ["*"]
-  verbs: ["*"]
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  - services
-  - endpoints
-  - configmaps
-  - secrets
-  verbs:
-  - '*'
-- apiGroups:
-  - apps
-  resources:
-  - deployments
-  - daemonsets
-  - replicasets
-  - statefulsets
-  verbs:
-  - '*'
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  verbs:
-  - get
-- apiGroups:
-  - apps
-  resources:
-  - replicasets
-  verbs:
-  - get
+  - apiGroups: ["serving.knative.dev"]
+    resources: ["*"]
+    verbs: ["*"]
+  - apiGroups: ["eventing.knative.dev"]
+    resources: ["*"]
+    verbs: ["*"]
+  - apiGroups: ["sources.eventing.knative.dev"]
+    resources: ["*"]
+    verbs: ["*"]
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+      - services
+      - endpoints
+      - configmaps
+      - secrets
+    verbs:
+      - "*"
+  - apiGroups:
+      - apps
+    resources:
+      - deployments
+      - daemonsets
+      - replicasets
+      - statefulsets
+    verbs:
+      - "*"
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+    verbs:
+      - get
+  - apiGroups:
+      - apps
+    resources:
+      - replicasets
+    verbs:
+      - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: pipeline-role-binding
-  namespace: demo
+  name: pipeline-exta-role-binding
+  namespace: tutorial
 roleRef:
   kind: Role
-  name: pipeline-role
+  name: pipeline-extra-role
   apiGroup: rbac.authorization.k8s.io
 subjects:
-- kind: ServiceAccount
-  name: pipeline
-  namespace: demo
+  - kind: ServiceAccount
+    name: pipeline
+    namespace: tutorial
