--- a/src/main/tekton/pipeline-resources.yml
+++ b/src/main/tekton/pipeline-resources.yml
@@ -18,4 +18,5 @@ spec:
   type: image
   params:
     - name: url
-      value: quay.io/rhdevelopers/blue-green-canary
+      #value: quay.io/rhdevelopers/blue-green-canary
+      value: "image-registry.openshift-image-registry.svc:5000/tutorial/helloworld"
